--- a/work №9/style.css
+++ b/work №9/style.css
@@ -2,8 +2,10 @@
     0%{
         transform: rotate(0);
     }
+    50%{
+        transform: rotate(180deg);
+    }
     100%{
         transform: rotate(360deg);
     }
-    
 }
