--- a/js14 sayt (No Completed)/sait/src/App.css
+++ b/js14 sayt (No Completed)/sait/src/App.css
@@ -2,7 +2,7 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #AC9D92;
+  background-color: #a19388;
 }
 
 .section {
