--- a/js14 sayt (No Completed)/sait/src/contact.css
+++ b/js14 sayt (No Completed)/sait/src/contact.css
@@ -1,9 +1,10 @@
- button {
+
+section {
     background: transparent;
     position: relative;
     padding: 5px 15px;
-    
     align-items: center;
+    display: flex;
     font-size: 17px;
     font-weight: 600;
     text-decoration: none;
@@ -49,7 +50,7 @@
   }
 
   .text{
-    font-size: 2.5rem;
+    font-size: 1.5rem;
     color: #4D4642; /* Темный цвет текста */
     margin-bottom: 20px;
     font-family: 'Georgia', serif;
