--- a/js14 sayt (No Completed)/sait/src/contact.css
+++ b/js14 sayt (No Completed)/sait/src/contact.css
@@ -1,55 +1,59 @@
-/* From Uiverse.io by Mangesh636 */ 
-button {
-    background: transparent;
-    position: relative;
-    padding: 5px 15px;
-    
-    align-items: center;
-    font-size: 17px;
-    font-weight: 600;
-    text-decoration: none;
-    cursor: pointer;
-    border: 1px solid rgb(36, 161, 222);
-    border-radius: 25px;
-    outline: none;
-    overflow: hidden;
-    color: rgb(36, 161, 222);
-    transition: color 0.3s 0.1s ease-out;
-    text-align: center;
-  }
-  
-  button span {
-    margin: 10px;
-  }
-  
-  button::before {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    margin: auto;
-    content: "";
-    border-radius: 50%;
-    display: block;
-    width: 20em;
-    height: 20em;
-    left: -5em;
-    text-align: center;
-    transition: box-shadow 0.5s ease-out;
-    z-index: -1;
-  }
-  
-  button:hover {
-    color: #fff;
-    border: 1px solid rgb(36, 161, 222);
-  }
-  
-  button:hover::before {
-    box-shadow: inset 0 0 0 10em rgb(36, 161, 222);
-  }
+.section {
+  text-align: center; /* Центрирование текста */
+  display: flex;
+  flex-direction: column; /* Элементы располагаются вертикально */
+  align-items: center; /* Центрирование по горизонтали */
+  justify-content: center; /* Центрирование по вертикали */
+}
 
-  span{
-    text-align: center;
-  }
-  
+button {
+  background: transparent;
+  position: relative;
+  padding: 5px 15px;
+  font-size: 17px;
+  font-weight: 600;
+  text-decoration: none;
+  cursor: pointer;
+  border: 1px solid rgb(36, 161, 222);
+  border-radius: 25px;
+  outline: none;
+  overflow: hidden;
+  color: rgb(36, 161, 222);
+  transition: color 0.3s 0.1s ease-out;
+  display: flex; /* Добавлено */
+  align-items: center; /* Выравнивание по вертикали */
+  justify-content: center; /* Выравнивание по горизонтали */
+  gap: 8px; /* Расстояние между иконкой и текстом */
+}
+
+.knopka {
+  margin: 0;
+  padding: 0;
+}
+
+button::before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  content: "";
+  border-radius: 50%;
+  display: block;
+  width: 20em;
+  height: 20em;
+  left: -5em;
+  text-align: center;
+  transition: box-shadow 0.5s ease-out;
+  z-index: -1;
+}
+
+button:hover {
+  color: #fff;
+  border: 1px solid rgb(36, 161, 222);
+}
+
+button:hover::before {
+  box-shadow: inset 0 0 0 10em rgb(36, 161, 222);
+}
